<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:id="@+id/layoutmain_main">

    <RelativeLayout
        android:id="@+id/carregando_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:background="@color/white">

        <TextView
            android:id="@+id/tv_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/autentica_usuario"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/imviewlogo"
            android:padding="20dp"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:contentDescription="@string/content_desc_logo_main"/>

        <EditText
            android:id="@+id/editusuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:paddingTop="15dp"
            android:paddingLeft="20dp"
            android:paddingBottom="15dp"
            android:ems="10"
            android:hint="@string/hintusuario"
            android:inputType="text"
            android:singleLine="true"
            android:background="@color/cinza_indice"
            android:layout_below="@+id/imviewlogo"
             />

        <EditText
            android:id="@+id/editsenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:paddingTop="15dp"
            android:paddingLeft="20dp"
            android:paddingBottom="15dp"
            android:ems="10"
            android:hint="@string/hintsenha"
            android:inputType="textPassword"
            android:fontFamily="sans-serif"
            android:singleLine="true"
            android:background="@color/cinza_indice"
            android:layout_below="@+id/editusuario"
            />

        <Button
            android:id="@+id/btlogar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="12dp"
            android:background="@color/colorPrimary"
            android:text="@string/lbtlogar"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_below="@+id/editsenha"/>
    </RelativeLayout>
</RelativeLayout>
