<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingRight="40dp"
        android:paddingLeft="40dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/textHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:padding="10dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/tvNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:gravity="center"
                android:singleLine="true"
                android:ellipsize="end"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingRight="28dp"
            android:paddingLeft="28dp"
            android:layout_below="@+id/textHeader">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">

                <TextView
                    android:id="@+id/tv_titulo_anual"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/faltas_ano"
                    android:paddingRight="5dp"/>

                <TextView
                    android:id="@+id/tvFaltasAno"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:ellipsize="end"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">

                <TextView
                    android:id="@+id/tv_titulo_bimestral"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/faltas_bimestre"
                    android:paddingRight="5dp"/>

                <TextView
                    android:id="@+id/tvFaltasBimestre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:ellipsize="end"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/faltas_sequencia"
                    android:paddingRight="5dp"/>

                <TextView
                    android:id="@+id/tvFaltasSequencia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="4"
                    android:singleLine="true"
                    android:ellipsize="end"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_nao_aplica"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_nao_aplica"
                android:text="N/A"
                android:textSize="34dp"
                android:textColor="@color/white"
                />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                />

            <Button
                android:id="@+id/bt_falta"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/button_falta"
                android:text="F"
                android:textSize="50dp"
                android:textColor="@color/white"/>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                />

            <Button
                android:id="@+id/bt_compareceu"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="right|center"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_presenca"
                android:text="C"
                android:textSize="50dp"
                android:textColor="@color/white"/>

        </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_status"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="40dp"
            android:gravity="center"
            android:visibility="gone"
            android:ellipsize="end"
            android:singleLine="true"/>
    </LinearLayout>

    </LinearLayout>

</RelativeLayout>